tooling/nargo_cli/tests/snapshots/execution_failure/regression_8230/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: attempt to add with overflow
  ┌─ src/main.nr:7:21
  │
7 │                 a = a + G_A;
  │                     ------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:7:21

Aborting due to 1 previous error
