tooling/nargo_cli/tests/snapshots/execution_failure/regression_8230/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to add with overflow
  ┌─ src/main.nr:7:21
  │
7 │                 a = a + G_A;
  │                     -------
  │
  = Call stack:
    1. src/main.nr:7:21

Failed assertion
