tooling/nargo_cli/tests/snapshots/execution_failure/regression_8230/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to add with overflow
  ┌─ src/main.nr:7:21
  │
7 │                 a = a + G_A;
  │                     -------
  │

Error interpreting main function
